ปรับสีพื้นหลัง schematic map

--- a/assets/schematic_maps/schematic_map.html
+++ b/assets/schematic_maps/schematic_map.html
@@ -17,9 +17,9 @@
         const colors = ['green', 'orange', 'red'];
         $(document).ready(() => {
             //$('.fillWhite').css('fill', '#000000');
-            $('#background').css('fill', '#222222');
-            $('.strokeEFEFEF').css('stroke', '#666666');
-            $('.fill666666').css('fill', '#efefef');
+            //$('#background').css('fill', '#222222');
+            //$('.strokeEFEFEF').css('stroke', '#666666');
+            //$('.fill666666').css('fill', '#efefef');
             //$('.fill8DB7DE').css('fill', '#222222');
 
             $('.pathYellow').css('stroke', '#0071BB');
