วาด cctv บน schematic map

--- a/assets/server/connection_visualization.html
+++ b/assets/server/connection_visualization.html
@@ -35,7 +35,7 @@
 
 <!-- Page content -->
 <div class="content">
-    <h3 class="title">ภาพ Visualization แสดงการเชื่อมต่อจากแอปพลิเคชัน EXAT Traffic เข้ามายังเครื่อง Server ที่การทางพิเศษแห่งประเทศไทย (ข้อมูลสมมติ)</h3>
+    <h3 class="title">ภาพ Visualization แสดงการเชื่อมต่อจากแอปพลิเคชัน EXAT Traffic เข้ามายังเครื่อง Server ที่การทางพิเศษแห่งประเทศไทย <span class="smaller-text">(ข้อมูลสมมติ)</span></h3>
     <div id="main-container" style="display: flex">
         <div style="background-image: url('images/base_map_dark2.png'); width: 540px; height: 540px; border: 0px solid red;">
             <canvas id="myCanvas" width="540px" height="540px" style="border: 0px solid #ccc;">
