--- a/assets/server/schematic_map.html
+++ b/assets/server/schematic_map.html
@@ -207,7 +207,7 @@
             <button type="button" class="btn btn-secondary text-monospace mb-0 pb-0 pl-3 pr-3" value="15"><h4>15x</h4></button>
         </div>
         <!--<img id="marker" src="images/ic_marker_blank.png" width="112" height="146">-->
-        <div id="svgContainer" class="dragscroll" style="overflow: auto; width: 540px; height: 600px; border: 1px solid grey; cursor: pointer">
+        <div id="svgContainer" class="dragscroll" style="overflow: hidden; width: 540px; height: 600px; border: 1px solid grey; cursor: pointer">
             <div id="svgWrapper" style="position: relative; display: flex; width: 100%; height: 100%; border: solid 0px blue">
                 <svg version="1.1" id="rootSvg"
                      xmlns="http://www.w3.org/2000/svg"
